samples/_failures_safe/1761345227_6e20f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66f15c06.c: In function ‘main’:
./samples/SAFE/__tmp_66f15c06.c:182:5: error: expected expression at end of input
  182 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_66f15c06.c:182:5: error: expected declaration or statement at end of input
